# 3dGraphicsImpl

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
Core/: CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h  ViewBase.h
Detail/: Material.h  Observer.h  Palette.h  Texture.h
MathUtils/: CMakeLists.txt  Matrix.h  Plane.cpp  Plane.h  Point3d.cpp  Point3d.h  Point4.cpp  Point4.h  Triangle.cpp  Triangle.h
Object/: CMakeLists.txt  Camera.cpp  Camera.h  Holder.cpp  Holder.h  Object.cpp  Object.h  Parser.cpp  Parser.h  TriangleBuffer.cpp  TriangleBuffer.h  TriangleData.h
Renderer/: CMakeLists.txt  LightManager.cpp  LightManager.h  Renderer.cpp  Renderer.h
Screen/: CMakeLists.txt  ScreenManager.cpp  ScreenManager.h
tests/: CMakeLists.txt  Clipping-test.cpp  Matrix-test.cpp
